Fix DNSProbe OtherErrorWithCorrectionsSuccess test with Network Service

This test has a somewhat complex flow:
- It performs a failed navigation
- The failed navigation results in a navigation to a correction URL via
  the Link Doctor
- When it sees the navigation to the Link Doctor URL, it responds with
  the contents of a test file directing the relevant Link Doctor actions
  (//chrome/test/data/mock-link-doctor.json)
- It then verifies that the final URL is as expected given the contents
  of that file

For non-Network Service, this flow is set up via
BreakableCorrectionInterceptor. This CL handles the flow in the Network
Service case by intercepting the Link Doctor request with a
URLLoaderInterceptor and extracting a utility function from
errorpage_browsertest.cc to write the contents of the test file as the
URLLoaderInterceptor's response.

Bug: 805951
Change-Id: Ia72c944079b46ed4aaa3538bde462a3c595f6248