chrome/browser/net/dns_probe_browsertest.cc
@@ -39,6 +39,7 @@
 #include "net/url_request/url_request_filter.h"
 #include "net/url_request/url_request_interceptor.h"
 #include "net/url_request/url_request_job.h"
+#include "net/url_request/url_request_test_job.h"
 #include "services/network/public/cpp/features.h"
 
 using base::Bind;
@@ -434,6 +435,9 @@ class DnsProbeBrowserTest : public InProcessBrowserTest {
   void TearDownOnMainThread() override;
 
  protected:
+  bool InterceptURLLoaderRequest(
+      content::URLLoaderInterceptor::RequestParams* params);
+
   // Sets the browser object that other methods apply to, and that has the
   // DnsProbeStatus messages of its currently active tab monitored.
   void SetActiveBrowser(Browser* browser);
@@ -511,14 +515,15 @@ void DnsProbeBrowserTest::SetUpOnMainThread() {
       BindOnce(&DnsProbeBrowserTestIOThreadHelper::SetUpOnIOThread,
                Unretained(helper_), g_browser_process->io_thread()));
 
+  ASSERT_TRUE(embedded_test_server()->Start());
+
   if (base::FeatureList::IsEnabled(network::features::kNetworkService)) {
-    // Just instantiating this helper is enough to respond to
-    // http(s)://mock.failed.request requests.
-    url_loader_interceptor_ =
-        std::make_unique<content::URLLoaderInterceptor>(base::BindRepeating(
-            [](content::URLLoaderInterceptor::RequestParams* params) {
-              return false;
-            }));
+    // NOTE: Need to intercept requests for subresources to catch the Link
+    // Doctor requests.
+    url_loader_interceptor_ = std::make_unique<content::URLLoaderInterceptor>(
+        base::BindRepeating(&DnsProbeBrowserTest::InterceptURLLoaderRequest,
+                            base::Unretained(this)),
+        true, true);
   }
 
   SetActiveBrowser(browser());
@@ -535,6 +540,19 @@ void DnsProbeBrowserTest::TearDownOnMainThread() {
 
   NetErrorTabHelper::set_state_for_testing(
       NetErrorTabHelper::TESTING_DEFAULT);
+}
+
+bool DnsProbeBrowserTest::InterceptURLLoaderRequest(
+    content::URLLoaderInterceptor::RequestParams* params) {
+  if (params->url_request.url.spec() == LinkDoctorBaseURL().spec()) {
+    return chrome_browser_net::WriteFileToURLLoader(
+        embedded_test_server(), params, "mock-link-doctor.json");
+  }
+
+  // Just returning false is enough to respond to http(s)://mock.failed.request
+  // requests, which are the only requests that come in besides the LinkDoctor
+  // requests.
+  return false;
 }
 
 void DnsProbeBrowserTest::SetActiveBrowser(Browser* browser) {
@@ -666,7 +684,15 @@ void DnsProbeBrowserTest::ExpectDisplayingLocalErrorPage(
 
 void DnsProbeBrowserTest::ExpectDisplayingCorrections(
     const std::string& status_text) {
-  EXPECT_TRUE(PageContains("http://mock.http/title2.html"));
+  // NOTE: In the case of the Network Service, the expected URL has a port
+  // inserted.
+  GURL url;
+  if (base::FeatureList::IsEnabled(network::features::kNetworkService)) {
+    url = embedded_test_server()->GetURL("mock.http", "/title2.html");
+  } else {
+    url = GURL("http://mock.http/title2.html");
+  }
+  EXPECT_TRUE(PageContains(url.spec()));
   EXPECT_TRUE(PageContains(status_text));
 }
 
@@ -905,8 +931,6 @@ IN_PROC_BROWSER_TEST_F(DnsProbeBrowserTest, CorrectionsLoadStoppedSlowProbe) {
 // Make sure probes don't run for subframe DNS errors.
 IN_PROC_BROWSER_TEST_F(DnsProbeBrowserTest, NoProbeInSubframe) {
   SetCorrectionServiceBroken(false);
-
-  ASSERT_TRUE(embedded_test_server()->Start());
 
   NavigateToURL(browser(),
                 embedded_test_server()->GetURL("/iframe_dns_error.html"));
